fixed truncate

--- a/homepage.css
+++ b/homepage.css
@@ -258,6 +258,13 @@ body {
   font-size: 16px;
   font-weight: 700;
 }
+.card-top-content2 {
+  max-width: 100%;
+  max-height: 48px;
+  font-size: 16px;
+  font-weight: 700;
+  
+}
 .mid-title {
   font-size: 24px;
   line-height: 28px;
